# rainy_day

./: Cargo.toml  README.md  flake.nix
.config/tracey/: config.styx
docs/spec/: rainy_day.md
src/: client.rs  lib.rs  main.rs  shared.rs  store.rs  tests.rs  utils.rs  vfs.rs
