[package]
name = "cloud_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
clap = { version = "4.6.0", features = ["derive"] }
deflate = "1.0.0"
hex = "0.4.3"
pbkdf2 = { version = "0.12.2", features = ["simple", "std"] }
rand = { version = "0.10.0", features = ["chacha"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
vfs = "0.12.2"
